work in porgress

--- a/growandshine.html
+++ b/growandshine.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="growandshine.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-   <header>
-    <div class="box1">
-        <h1>grow & shine</h1>
-    </div>
-    <div class="box2">
-        <a href="" class="abc"><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;775-8348857</a>
+    <header>
+        <div class="box1">
+            <h1>grow & shine</h1>
+        </div>
+        <div class="box2">
+            <a href="">
+                <i class="fa-solid fa-phone"></i>&nbsp;&nbsp;
+                785-325-2897
+            </a>
 
-        <span><i class="fa-solid fa-cart-shopping"></i></span>
-    </div>
-   </header>
+            <span><i class="fa-solid fa-cart-shopping"></i></span>
+        </div>
+    </header>
 
-
-   <main>
-    <section class="section1">
+<main>
+    <section class="section-1">
         <div class="box11">
             <div class="parent">
                 <h1>grow & shine</h1>
-                <h3>Win with Grow and Shine!</h3>
-                <div class="an">
-                    <a href="" >Order Here &nbsp;
-                    <i class="fa-solid fa-arrow-right"></i>
-                   </a>
-                </div>
-            </div >  
+                <h2>Win with Grow and Shine!</h2>
+               <div class="an">
+                    <a href="">order here &nbsp;&nbsp;
+                            <i class="fa-solid fa-arrow-right"></i>
+                    </a>
+               </div>
+            </div>
             <div class="image">
                 <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif" alt="image">
-            </div>         
+            </div>
         </div>
         <div class="box22">
             <div class="img2">
-                <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif" alt="img2">
+                <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif" alt="image-2">
             </div>
-            <h1>
-                Purchase Today!
-            </h1>
+
+                    <h1>Purchase Today!</h1>
+
             <div class="italic">
-                <i>Purchase Grow and Shine today!<br>
-                    Buy 10 Get 6 Free is the Best Value!
+                <i>
+                    Purchase Grow and Shine today!<br>
+Buy 10 Get 6 Free is the Best Value!
                 </i>
             </div>
+
             <p>
                 Grow and Shine is a melatonin supplement used<br>
 to improve hair texture and skin. Melatonin is also known<br> for it's calming effects.<br>
@@ -57,144 +66,14 @@ For more info on Grow and Shine visit our<br>
 products page.
             </p>
 
-            <a href="">Order Here</a>
+            <a href="">order here</a>
         </div>
     </section>
-   </main>
+</main>
 
-   <footer>
+    <footer>
 
-   </footer>
+    </footer>
 </body>
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-        font-family: "Poppins", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-    }
 
-    .section1{
-        display: flex;
-        justify-content: space-between;
-        padding: 50px 155px;
-
-
-        & .box11{
-
-
-            & h1{
-                margin-top: 35px;
-                font-size: 66px;
-                text-transform: uppercase;
-                letter-spacing: 3px;
-            }
-
-            & h3{
-                font-size: 30px;
-                margin-top: -20px;
-            }
-
-            & .parent{
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
-            }
-
-            & .an{
-                border: 1px solid;
-                width: 143px;
-                padding: 13px;
-                padding-left: 35px;
-                margin-top: 30px;
-                margin-bottom: 78px;
-            }
-
-            & a{
-                text-decoration: none;
-                font-size: 17px;
-            }
-
-            & .image{
-                text-align: end;
-                margin-right: 150px;
-            }
-        }
-
-        & .box22{
-
-
-            & .img2{
-                text-align: center;
-                margin-bottom: 50px;
-            }
-
-            & h1{
-                font-size: 45px;
-                margin-top: 50px;
-            }
-        }
-    }
-
-    header{
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 1px groove rgb(219, 218, 218);
-        padding: 13px 155px;
-        align-items: center;
-
-
-        & .box1{
-        
-        & h1{
-            font-size: 17px;
-            text-transform: capitalize;
-        }
-    }
-
-        & .box2{
-            display: flex;
-            gap: 40px;
-            align-items: center;
-
-        & a{
-            text-decoration: none;
-            background-color: rgb(41, 40, 40);
-            color: white;
-            padding: 14px 33px;
-            border-radius: 30px;
-            transition: all 0.5s linear;
-
-        &:hover{
-            background-color: rgb(109, 103, 103);
-        }
-    }
-
-        & span{
-            font-size: 22px;
-        }
-    }
- }
-
- @media (width < 500px) {
-            header{
-                background-color: teal;
-                padding: 13px 40px;
-                margin: auto;
-            }
-
-            .abc{
-                display: none;
-            }
-
-            .box11{
-                font-size: 15px;
-            }
-
-            .box1{
-                font-size: 15px;
-            }
-        }
-</style>
 </html>
