--- a/growandshine.html
+++ b/growandshine.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grow & Shine</title>
     <link rel="stylesheet" href="growandshine.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,6 +67,52 @@ products page.
             </p>
 
             <a href="">order here</a>
+        </div>
+    </section>
+    <section class="border"><div></div></section>
+    <section class="section-2">
+        <div class="purple1">
+            <div class="box-31">
+                <div class="box-311">How you can purchase Grow and Shine:<br>
+                    Shop Online Order from our secure store<br>
+                    Call  (785) 325-2097<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(402) 768-8066</div>
+                <div class="box-312">By Mail - send a check to:<br>
+                    Grow and Shine<br>
+                    400 E. College St.<br>
+                    Washington, KS  66968</div>
+                <div class="box-313">Make checks payable to: Grow and Shine</div>
+            </div>
+            <div class="box-32">1 Bottle Include - $59.99  +$25.99 S/H<br>
+                <span>Total = $85.98</span><br>
+(KS Residents Only - add an additional $4.50 for Sales Tax) <br>
+Buy 3 Get 1 Free Include - $179.97 +$35.99 S/H<br>
+                <span>Total  =$215.96 </span>(Only $45.00 per bottle)<br>
+(KS Residents Only - add an additional $13.50 for Sales Tax)<br>
+<span id="underline">BEST VALUE!</span><br>
+Buy 10 Get 6 Free Include - $599.90 +$49.99 S/H<br>
+                <span>Total $649.89</span>  (Only $37.50 per bottle)<br>
+(KS Residents Only - add an additional$45.00 for Sales Tax)</div>
+        </div>
+    </section>
+    <section class="section-3">
+        <div class="silver">
+            <div class="box-41"><h1>Grow & Shine - 32 ounce</h1></div>
+            <div class="box-42">- Supports Hair Growth*<br>
+                - Enhances Hair Shine*<br>
+                - Maximizes Overall Hair Energy*<br>
+                Description:   The ingredients in Grow and Shine have been shown to increase hair growth, hair sheen and is also known for it's calming properties.</div>
+            <div class="box-43">Ingredients :<br>
+                Melatonin - has been shown to revitalize hair growth and also know for it's calming properties.<br>
+                Biotin - is an essential member of the B-Complex Family and is very important for healthy looking hair. Biotin has been shown to be effective to stop and <br> prevent hair loss.<br>
+                Niacin - Works best in conjunction with Biotin to promote healthy hair growth.  Niacin increases blood flow to the follicle, which is very important to hair <br> growth.<br>
+                Folic Acid - essential for the production of red blood cells, tissue cells and normal growth.<br>
+                Vitamin B12 - Plays an important role in promoting healthy skin and hair.<br>
+                Pantothenic Acid - Studies have shown that Pantothenic Acid plays an important role in hair-loss prevention.<br>
+                Iodine - The thyroid gland plays and important part in healthy hair and skin.  The Thyroid is dependent upon iodine to function.<br>
+                Zinc Oxide - Zinc is important for normal hair health.  Zinc has also been used for treating alopecia and baldness.<br>
+                Manganese Gluconate - necessary for bone, skin and ligament formation.<br>
+                Choline Bitartrate and Inositol -   work together in the body and are responsible for the formation of lecithin in the body. They play an important role in the <br>prevention of hair-loss and stimulation of hair-growth.</div>
         </div>
     </section>
 </main>
