--- a/growandshine.html
+++ b/growandshine.html
@@ -29,93 +29,114 @@
         </div>
     </header>
 
-<main>
-    <section class="section-1">
-        <div class="box11">
-            <div class="parent">
-                <h1>grow & shine</h1>
-                <h2>Win with Grow and Shine!</h2>
-               <div class="an">
-                    <a href="">order here &nbsp;&nbsp;
+    <main>
+        <section class="section-1">
+            <div class="box11">
+                <div class="parent">
+                    <h1>grow & shine</h1>
+                    <h2>Win with Grow and Shine!</h2>
+                    <div class="an">
+                        <a href="">order here &nbsp;&nbsp;
                             <i class="fa-solid fa-arrow-right"></i>
-                    </a>
-               </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif" alt="image">
+                </div>
             </div>
-            <div class="image">
-                <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif" alt="image">
-            </div>
-        </div>
-        <div class="box22">
-            <div class="img2">
-                <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif" alt="image-2">
-            </div>
+            <div class="box22">
+                <div class="img2">
+                    <img src="https://growandshine.com/__static/45ee69faa5e2b390c1d5c76b7a646238/gs32.gif"
+                        alt="image-2">
+                </div>
 
-                    <h1>Purchase Today!</h1>
+                <h1>Purchase Today!</h1>
 
-            <div class="italic">
-                <i>
-                    Purchase Grow and Shine today!<br>
-Buy 10 Get 6 Free is the Best Value!
-                </i>
+                <div class="italic">
+                    <i>Purchase Grow and Shine today!<br>Buy 10 Get 6 Free is the Best Value!</i>
+                </div>
+
+                <p>
+                    Grow and Shine is a melatonin supplement used<br>
+                    to improve hair texture and skin. Melatonin is also known<br> for it's calming effects.<br>
+                    For more info on Grow and Shine visit our<br>
+                    products page.
+                </p>
+
+                <a href="">order here</a>
             </div>
-
-            <p>
-                Grow and Shine is a melatonin supplement used<br>
-to improve hair texture and skin. Melatonin is also known<br> for it's calming effects.<br>
-For more info on Grow and Shine visit our<br>
-products page.
-            </p>
-
-            <a href="">order here</a>
-        </div>
-    </section>
-    <section class="border"><div></div></section>
-    <section class="section-2">
-        <div class="purple1">
-            <div class="box-31">
-                <div class="box-311">How you can purchase Grow and Shine:<br>
-                    Shop Online Order from our secure store<br>
-                    Call  (785) 325-2097<br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(402) 768-8066</div>
-                <div class="box-312">By Mail - send a check to:<br>
-                    Grow and Shine<br>
-                    400 E. College St.<br>
-                    Washington, KS  66968</div>
-                <div class="box-313">Make checks payable to: Grow and Shine</div>
+        </section>
+        <section class="border">
+            <div></div>
+        </section>
+        <section class="section-2">
+            <div class="purple1">
+                <div class="box-31">
+                    <div class="box-311">How you can purchase Grow and Shine:<br>
+                        Shop Online Order from our secure store<br>
+                        Call (785) 325-2097<br>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(402) 768-8066</div>
+                    <div class="box-312">By Mail - send a check to:<br>
+                        Grow and Shine<br>
+                        400 E. College St.<br>
+                        Washington, KS 66968</div>
+                    <div class="box-313">Make checks payable to: Grow and Shine</div>
+                </div>
+                <div class="box-32">1 Bottle Include - $59.99 +$25.99 S/H<br>
+                    <span>Total = $85.98</span><br>
+                    (KS Residents Only - add an additional $4.50 for Sales Tax) <br>
+                    Buy 3 Get 1 Free Include - $179.97 +$35.99 S/H<br>
+                    <span>Total =$215.96 </span>(Only $45.00 per bottle)<br>
+                    (KS Residents Only - add an additional $13.50 for Sales Tax)<br>
+                    <span id="underline">BEST VALUE!</span><br>
+                    Buy 10 Get 6 Free Include - $599.90 +$49.99 S/H<br>
+                    <span>Total $649.89</span> (Only $37.50 per bottle)<br>
+                    (KS Residents Only - add an additional$45.00 for Sales Tax)
+                </div>
             </div>
-            <div class="box-32">1 Bottle Include - $59.99  +$25.99 S/H<br>
-                <span>Total = $85.98</span><br>
-(KS Residents Only - add an additional $4.50 for Sales Tax) <br>
-Buy 3 Get 1 Free Include - $179.97 +$35.99 S/H<br>
-                <span>Total  =$215.96 </span>(Only $45.00 per bottle)<br>
-(KS Residents Only - add an additional $13.50 for Sales Tax)<br>
-<span id="underline">BEST VALUE!</span><br>
-Buy 10 Get 6 Free Include - $599.90 +$49.99 S/H<br>
-                <span>Total $649.89</span>  (Only $37.50 per bottle)<br>
-(KS Residents Only - add an additional$45.00 for Sales Tax)</div>
-        </div>
-    </section>
-    <section class="section-3">
-        <div class="silver">
-            <div class="box-41"><h1>Grow & Shine - 32 ounce</h1></div>
-            <div class="box-42">- Supports Hair Growth*<br>
-                - Enhances Hair Shine*<br>
-                - Maximizes Overall Hair Energy*<br>
-                Description:   The ingredients in Grow and Shine have been shown to increase hair growth, hair sheen and is also known for it's calming properties.</div>
-            <div class="box-43">Ingredients :<br>
-                Melatonin - has been shown to revitalize hair growth and also know for it's calming properties.<br>
-                Biotin - is an essential member of the B-Complex Family and is very important for healthy looking hair. Biotin has been shown to be effective to stop and <br> prevent hair loss.<br>
-                Niacin - Works best in conjunction with Biotin to promote healthy hair growth.  Niacin increases blood flow to the follicle, which is very important to hair <br> growth.<br>
-                Folic Acid - essential for the production of red blood cells, tissue cells and normal growth.<br>
-                Vitamin B12 - Plays an important role in promoting healthy skin and hair.<br>
-                Pantothenic Acid - Studies have shown that Pantothenic Acid plays an important role in hair-loss prevention.<br>
-                Iodine - The thyroid gland plays and important part in healthy hair and skin.  The Thyroid is dependent upon iodine to function.<br>
-                Zinc Oxide - Zinc is important for normal hair health.  Zinc has also been used for treating alopecia and baldness.<br>
-                Manganese Gluconate - necessary for bone, skin and ligament formation.<br>
-                Choline Bitartrate and Inositol -   work together in the body and are responsible for the formation of lecithin in the body. They play an important role in the <br>prevention of hair-loss and stimulation of hair-growth.</div>
-        </div>
-    </section>
-</main>
+        </section>
+        <section class="section-3">
+            <div class="silver">
+                <div class="box-41">
+                    <h1>Grow & Shine - 32 ounce</h1>
+                </div>
+                <div class="box-42">- Supports Hair Growth*<br>
+                    - Enhances Hair Shine*<br>
+                    - Maximizes Overall Hair Energy*<br>
+                    Description: The ingredients in Grow and Shine have been shown to increase hair growth, hair sheen
+                    and is also known for it's calming properties.</div>
+                <div class="box-43">Ingredients :<br>
+                    Melatonin - has been shown to revitalize hair growth and also know for it's calming properties.<br>
+                    Biotin - is an essential member of the B-Complex Family and is very important for healthy looking
+                    hair. Biotin has been shown to be effective to stop and <br> prevent hair loss.<br>
+                    Niacin - Works best in conjunction with Biotin to promote healthy hair growth. Niacin increases
+                    blood flow to the follicle, which is very important to hair <br> growth.<br>
+                    Folic Acid - essential for the production of red blood cells, tissue cells and normal growth.<br>
+                    Vitamin B12 - Plays an important role in promoting healthy skin and hair.<br>
+                    Pantothenic Acid - Studies have shown that Pantothenic Acid plays an important role in hair-loss
+                    prevention.<br>
+                    Iodine - The thyroid gland plays and important part in healthy hair and skin. The Thyroid is
+                    dependent upon iodine to function.<br>
+                    Zinc Oxide - Zinc is important for normal hair health. Zinc has also been used for treating alopecia
+                    and baldness.<br>
+                    Manganese Gluconate - necessary for bone, skin and ligament formation.<br>
+                    Choline Bitartrate and Inositol - work together in the body and are responsible for the formation of
+                    lecithin in the body. They play an important role in the <br>prevention of hair-loss and stimulation
+                    of hair-growth.</div>
+            </div>
+        </section>
+        <section class="section-4">
+            <div class="box-51">
+                <h1>Studies and Links</h1>
+            </div>
+            <div class="box-52">
+                <a href="">Melatonin Increases Hair Growth in Yak Study</a>
+                <div><a href="">Melatonin Used in Post Hair Loss Therapy for Dogs</a></div>
+            </div>
+            <div class="box-53">Purchase Grow and Shine Today. Special Buy 10 Get 6 Free is the Best Value!</div>
+        </section>
+    </main>
 
     <footer>
 
