--- a/growandshine.html
+++ b/growandshine.html
@@ -131,16 +131,52 @@
                 <h1>Studies and Links</h1>
             </div>
             <div class="box-52">
-                <a href="">Melatonin Increases Hair Growth in Yak Study</a>
-                <div><a href="">Melatonin Used in Post Hair Loss Therapy for Dogs</a></div>
+                <a href="">Melatonin Increases Hair Growth in Yak Study</a><br>
+                <a href="">Melatonin Used in Post Hair Loss Therapy for Dogs</a>
             </div>
-            <div class="box-53">Purchase Grow and Shine Today. Special Buy 10 Get 6 Free is the Best Value!</div>
+            <div class="box-53"><i>Purchase Grow and Shine Today. Special Buy 10 Get 6 Free is the Best Value!</i></div>
         </section>
+<section class="section-5">
+    <div class="purple2">
+        <div class="box-61"><h2>Grow and Shine Product Price and Compare</h2></div>
+        <div class="box-62">Most retail outlets sell Melatonin 120 count - 3 mg pills for $1.67 per 100 mg.<br>
+            Grow and Shine  128 oz - 12.8 g (4 bottle promotion) = $1.40 per 100mg<br>
+            Save 30% over the competition!!<br>
+            Grow and Shine  512 oz - 51.2 g (16 bottle promotion) = $1.17 per 100mg<br>
+            Grow and Shine is the better value!<br>
+            Grow and Shine also contains 10 other ingredients shown to increase hair quality<br>
+            and Grow and Shine is in liquid form for easier use and better absorption.</div>
+    </div>
+</section>
+<section class="border">
+    <div></div>
+</section>
     </main>
 
-    <footer>
+    <footer class="footer">
+        <div class="parent2">
+            <div class="box-71">
+                <div class="box-711"><h1>Grow & Shine</h1></div>
+                <div class="box-712"><a href="">ORDER GROW AND SHINE 
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HERE</a></div>
+            </div>
+            <div class="box-72">
+                <div class="box-721">BY MAIL</div>
+                <div class="box-722">Grow and Shine,<br>
+                    400 E. College St.<br>
+                    Washington, Kansas 6698</div>
+                <div class="box-723">Mon - Fri: 8:00 - 6:00<br>
+                    Sat - Sun: Closed</div>
+            </div>
+                <div class="box-73">
+                    <div class="box-731">Phone orders</div>
+                    <div class="box-732">P:<a href="">785.325.2097 or 402.768.8066</a></div>
+                </div>
+        </div>
+        Copyright © 2022 Growandshine.com. All Rights Reserved.
+        </footer>
+ 
 
-    </footer>
 </body>
 
 </html>
