--- a/growandshine.html
+++ b/growandshine.html
@@ -170,12 +170,12 @@
             </div>
                 <div class="box-73">
                     <div class="box-731">Phone orders</div>
-                    <div class="box-732">P:<a href="">785.325.2097 or 402.768.8066</a></div>
+                    <div class="box-732">P:&nbsp;&nbsp;<a href="">785.325.2097 or 402.768.8066</a></div>
                 </div>
         </div>
-        Copyright © 2022 Growandshine.com. All Rights Reserved.
+        Copyright © 2022 Growandshine.com. All Rights Reserved
         </footer>
- 
+        
 
 </body>
 
